<resources>
    <string name="app_name">News</string>
    <string name="home">Home</string>
    <string name="favorites">My Favorites</string>
    <string name="search">Search</string>
    <string name="search_button">Search button</string>
    <string name="settings">Settings</string>
    <string name="api_key">API Key:</string>
    <string name="save">Save</string>
    <string name="current_key">Current key:</string>
    <string name="empty">Empty</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="news_source">News Source</string>
    <string name="deleted">Deleted from Favorites!</string>
    <string name="added_to_favorites">Added to Favorites!</string>
    <string name="exists">Already added!</string>
    <string name="share_via">Share via</string>
</resources>